unpackaged/main/default/objects/Case/fields/Case_Number_Master__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Master__c</fullName>
    <formula>if( ParentId != null, Parent.CaseNumber, CaseNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number Master</label>
    <type>Text</type>
</CustomField>