unpackaged/main/default/objects/Case/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>