unpackaged/main/default/objects/Case/fields/case_summary__c.field-meta.xml
<CustomField>
    <fullName>case_summary__c</fullName>
    <formula>IF( RecordType.Name = "Quality Claim", RecordType.Name, RecordType.Name &amp;" - "&amp;  TEXT(Type)  )</formula>
    <label>Case Summary</label>
    <type>Text</type>
</CustomField>