unpackaged/main/default/objects/Case/fields/Case_Time_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Case_Time_Elapsed__c</fullName>
    <formula>IF(IsClosed = FALSE &amp;&amp; NOW()&gt; SLA_End_Time__c, "Calculating...", 
TEXT(FLOOR(Running_Case_Time__c)) + " HRS " + TEXT(FLOOR(MOD((Running_Case_Time__c*3600),3600)/60)) + " MINS")</formula>
    <label>Case Time Elapsed</label>
    <type>Text</type>
</CustomField>