unpackaged/main/default/objects/Case/fields/CcEmail__c.field-meta.xml
<CustomField>
    <fullName>CcEmail__c</fullName>
    <label>CcEmail</label>
    <type>TextArea</type>
</CustomField>