unpackaged/main/default/objects/Case/fields/Certificate_of_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Analysis?</label>
    <type>Checkbox</type>
</CustomField>