unpackaged/main/default/objects/Case/fields/Certificate_of_Freesale__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Freesale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Freesale</label>
    <type>Checkbox</type>
</CustomField>