unpackaged/main/default/objects/Case/fields/Certificate_of_Origin_with_Lot_Codes__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Origin_with_Lot_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Origin with Lot Codes?</label>
    <type>Checkbox</type>
</CustomField>