unpackaged/main/default/objects/Case/fields/Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Reason__c</fullName>
    <label>Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improperly Invoiced - Wrong Price</fullName>
            </value>
            <value>
                <fullName>Improperly Invoiced - Invalid Price</fullName>
            </value>
            <value>
                <fullName>Pricing Disagreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>