unpackaged/main/default/objects/Case/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add Item</fullName>
            </value>
            <value>
                <fullName>Remove Item</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Expediting</fullName>
            </value>
            <value>
                <fullName>Changing Carrier</fullName>
            </value>
            <value>
                <fullName>Ship Date Change</fullName>
            </value>
            <value>
                <fullName>Account Update</fullName>
            </value>
            <value>
                <fullName>New or Existing Item Setup</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>