unpackaged/main/default/objects/Case/fields/Checked_MDO4__c.field-meta.xml
<CustomField>
    <fullName>Checked_MDO4__c</fullName>
    <label>Checked MDO4?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>