unpackaged/main/default/objects/Case/fields/Claim_Description__c.field-meta.xml
<CustomField>
    <fullName>Claim_Description__c</fullName>
    <label>Claim Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>