unpackaged/main/default/objects/Case/fields/Clarity__c.field-meta.xml
<CustomField>
    <fullName>Clarity__c</fullName>
    <label>Clarity</label>
    <type>TextArea</type>
</CustomField>