unpackaged/main/default/objects/Case/fields/Closed_No_Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_No_Action_Reason__c</fullName>
    <description>Closed-No Action Reason is a custom field that is required for a Compliance Sub-Case Record Type that has the following Status: Closed - No Action</description>
    <inlineHelpText>A Reason for setting the Compliance Sub-Case Record Type status to Closed-No Action.</inlineHelpText>
    <label>Closed-No Action Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>