unpackaged/main/default/objects/Case/fields/Color_Hue__c.field-meta.xml
<CustomField>
    <fullName>Color_Hue__c</fullName>
    <label>Color/Hue</label>
    <type>TextArea</type>
</CustomField>