unpackaged/main/default/objects/Case/fields/Commercial_Contact_Reached__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contact_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Contact Reached?</label>
    <type>Checkbox</type>
</CustomField>