unpackaged/main/default/objects/Case/fields/Community_User_Created_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Created_Indicator__c</fullName>
    <inlineHelpText>This self-reported picklist shows if the Portal User associated to this case has been created yet. 
If 'No', someone must still click the link to the contact and enable the user. 
If 'Yes', someone has already performed this step.</inlineHelpText>
    <label>Community User Created?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>