unpackaged/main/default/objects/Case/fields/Company_Code_RTR__c.field-meta.xml
<CustomField>
    <fullName>Company_Code_RTR__c</fullName>
    <label>Company Code - RTR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA30 - Alberta Distillers Ltd [CA]</fullName>
            </value>
            <value>
                <fullName>CA60 - Beam Global Canada Inc. [CA]</fullName>
            </value>
            <value>
                <fullName>CA70 - Canadian Club Canada, Inc [CA]</fullName>
            </value>
            <value>
                <fullName>US11 - Maker's Mark Distillery [US]</fullName>
            </value>
            <value>
                <fullName>US30 - Jim Beam Brands, Co. [US]</fullName>
            </value>
            <value>
                <fullName>USC0 - Jim Beam Brands, Co. [US]</fullName>
            </value>
            <value>
                <fullName>USC1 - EMEA Ledger</fullName>
            </value>
            <value>
                <fullName>USC2 - APSA Ledger</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>