unpackaged/main/default/objects/Case/fields/Consumer_City__c.field-meta.xml
<CustomField>
    <fullName>Consumer_City__c</fullName>
    <description>This field is used to store the Consumer City from Account's Person Mailing City</description>
    <inlineHelpText>This field is used to store the Consumer City from Account's Person Mailing City</inlineHelpText>
    <label>Consumer City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>