unpackaged/main/default/objects/Case/fields/Consumer_Country__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Country__c</fullName>
    <description>This field is used to store the Consumer Country from Account's Person Mailing Country</description>
    <inlineHelpText>This field is used to store the Consumer Country from Account's Person Mailing Country</inlineHelpText>
    <label>Consumer Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>