unpackaged/main/default/objects/Case/fields/Consumer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Postal_Code__c</fullName>
    <description>This field is used to store the Consumer Postal Code from Account's Person Mailing Postal Code</description>
    <inlineHelpText>This field is used to store the Consumer Postal Code from Account's Person Mailing Postal Code</inlineHelpText>
    <label>Consumer Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>