unpackaged/main/default/objects/Case/fields/Consumer_Street__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Street__c</fullName>
    <description>This field is used to store the Consumer Street from Account's Person Mailing Street</description>
    <inlineHelpText>This field is used to store the Consumer Street from Account's Person Mailing Street</inlineHelpText>
    <label>Consumer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>